testsuite/tests/rename/should_fail/T12681.hs
{-# LANGUAGE GHC2021 #-}
module T12681 where
import qualified T12681a

x = T12681a.A { a = 0 }
