testsuite/tests/rename/should_fail/T12681.stderr

T12681.hs:5:17: error: [GHC-76037]
    Not in scope: ‘a’
    Suggested fix:
      Perhaps use record field of A ‘T12681a.a’ (imported from T12681a)
